# ridgeline

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.agent/memory/: condensed-memory.md
.claude/commands/: README.md  start-project.md
.claude/hooks/: structure-check.md
.claude/skills/code-review/: SKILL.md
.meta.example/: README.md  captains-log.md  insights-index.csv  insights.md
docs/: architecture.md  developer-workspace.md
docs/decisions/: ADR-001-founding-decisions.md  TEMPLATE.md
docs/product/: ridgeline-ceo-strategic-constraints.md  ridgeline-ceo-system-prompt.md
docs/research/: 2026-04-05-perp-ridgeline-ui-design-research.md
src/ridgeline/: __init__.py
tests/: test_smoke.py
